[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/quit.gd" type="Script" id=1]
[ext_resource path="res://graphics/quit.png" type="Texture" id=2]
[ext_resource path="res://utils/PressStart2P.tres" type="DynamicFont" id=3]
[ext_resource path="res://graphics/next_indicator.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Text/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text/Label3:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Text/Label2:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.6, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 4.4, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "twist"
}, {
"args": [  ],
"method": "end_triggered"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "animate"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("next_indicator:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Quit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
hframes = 2

[node name="next_indicator" type="Sprite" parent="."]
visible = false
position = Vector2( 288, 104 )
rotation = 1.5708
texture = ExtResource( 4 )
hframes = 2
frame = 1

[node name="Text" type="VBoxContainer" parent="."]
margin_left = 176.0
margin_top = 40.0
margin_right = 296.0
margin_bottom = 107.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Text"]
margin_right = 120.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You broke
the loop."
align = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap" type="Control" parent="Text"]
margin_top = 25.0
margin_right = 120.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Text"]
margin_top = 29.0
margin_right = 120.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "..."
align = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap2" type="Control" parent="Text"]
margin_top = 42.0
margin_right = 120.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Text"]
margin_top = 46.0
margin_right = 120.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Or did the loop
break you?"
align = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Animate = SubResource( 1 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "animate"
playback_speed = 0.25
anims/animate = SubResource( 2 )
